# Ltts_project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
config/rules/: iso_14607.yaml  iso_15223.yaml
data/knowledge_base/: ISO-14607-2024.json
data/symbol_library/: Copy of Symbol Library Export.xlsm  symbol_library.json
docs/: adding-standards.md  architecture.md  meeting-transcript-clean.md  modules.md  recommended-architecture.md  rule-authoring.md  transcript-raw.txt
outputs/reports/: redline-report-DRWG107601_Rev_D_(1).md  redline-report-DRWG107602_Rev_D_1.md  redline-report-DRWG107618_Rev_D_NATIVE_1.md  redline-report-DRWG107621_Rev_D_NATIVE_1.md  report-ARTW-100765708-01-_CPG__331_Gel_Breast_Implant.json  report-ARTW-100765708-01-_CPG__331_Gel_Breast_Implant.md  report-DRWG107503_C.json  report-DRWG107503_C.md  report-DRWG107601_Rev_D__1.json  report-DRWG107601_Rev_D__1.md  report-DRWG107602_Rev_D.json  report-DRWG107602_Rev_D.md  report-DRWG107602_Rev_D_1.json  report-DRWG107602_Rev_D_1.md  report-DRWG107686_A.json  report-DRWG107686_A.md  validation-report.md
scripts/: analyze_symbol_lib.py  audit_redline_visual.py  compare_with_manual.py  extract_symbol_library.py
src/label_compliance/: __init__.py  __main__.py  cli.py  config.py
src/label_compliance/ai/: __init__.py  api.py  base.py  local.py
tests/: conftest.py  test_ai_integration.py  test_compliance.py  test_config.py  test_document.py  test_knowledge_base.py  test_specs_validator.py  test_symbol_library.py
(+33 files in other folders)
